Add CPM, bidder params, UserAgent, PBS flag in GreenbidsAnalyticsReporter